--- a/style.css
+++ b/style.css
@@ -19,6 +19,20 @@
     flex-direction: column-reverse;
 }
 
+.container>*>*{
+    text-align: center;
+}
+
+.container>*>*:nth-child(1){
+    order: 2;
+}
+.container>*>*:nth-child(2){
+    order: 1;
+}
+.container>*>*:nth-child(3){
+    order: 3;
+}
+
 .container img{
     width: 100%;
     object-fit: cover;
