--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@
     flex-direction: column-reverse;
 }
 
+form{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+    padding: 100px 0 100px 0;
+}
+
 .container>*>*{
     text-align: center;
 }
